add api endpoint /api/v1/files/tmpurl to generate temp url for a file
